chore: add tsconfig and biome config

--- a/contracts/btc/package.json
+++ b/contracts/btc/package.json
@@ -1,19 +1,25 @@
 {
-  "author": "",
-  "description": "",
   "devDependencies": {
+    "@biomejs/biome": "^2.0.5",
+    "@repo/config": "workspace:*",
+    "@types/node": "22",
     "bitcoinjs-lib": "^6.1.7",
     "ecpair": "^3.0.0",
     "tiny-secp256k1": "^2.2.4",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "typescript": "^5.7.3"
   },
   "keywords": [],
   "license": "ISC",
-  "main": "index.js",
-  "name": "btc",
+  "main": "src/index.ts",
+  "name": "@repo/btc",
   "scripts": {
     "create-wallet": "tsx scripts/create-wallet.ts",
-    "fund-wallet": "tsx scripts/fund-wallet.ts"
+    "format": "pnpm exec biome format",
+    "format:write": "pnpm exec biome format --write",
+    "fund-wallet": "tsx scripts/fund-wallet.ts",
+    "lint": "pnpm exec biome lint && pnpm exec biome check",
+    "lint:write": "pnpm exec biome lint --write && pnpm exec biome check --write"
   },
   "type": "module",
   "version": "1.0.0"
