--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
   "files.associations": {
     "*.css": "tailwindcss"
   },
+  "solidity.defaultCompiler": "remote",
   "tailwindCSS.classAttributes": [
     "class",
     "className",
