chore: update pragma versions

--- a/contracts/evm/foundry.toml
+++ b/contracts/evm/foundry.toml
@@ -48,3 +48,4 @@ auto_format = true
 # -------------------------------------------------------------
 [dependencies]
 forge-std = "1.9.7"
+"@openzeppelin-contracts" = "5.4.0"
