--- a/contracts/evm/foundry.toml
+++ b/contracts/evm/foundry.toml
@@ -9,6 +9,7 @@ optimizer_runs = 20000
 ffi = true
 src = "src"
 out = "out"
+via_ir = true
 dynamic_test_linking = true
 gas_reports = ["*"]
 libs = ["dependencies"]
