--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -14,7 +14,8 @@
     "./tsconfig/app/vite": "./tsconfig/app/vite.json",
     "./tsconfig/library": "./tsconfig/library/base.json",
     "./tsconfig/library/base": "./tsconfig/library/base.json",
-    "./tsconfig/library/browser": "./tsconfig/library/browser.json"
+    "./tsconfig/library/browser": "./tsconfig/library/browser.json",
+    "./tsconfig/library/node": "./tsconfig/library/base.json"
   },
   "files": ["./biome", "./tsconfig"],
   "license": "MIT",
