--- a/contracts/btc/package.json
+++ b/contracts/btc/package.json
@@ -4,7 +4,7 @@
     "@repo/config": "workspace:*",
     "@types/node": "22",
     "bitcoinjs-lib": "^6.1.7",
-    "ecpair": "^3.0.0",
+    "ecpair": "2.1.0",
     "tiny-secp256k1": "^2.2.4",
     "tsx": "^4.20.3",
     "typescript": "^5.7.3"
