--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "@wagmi/core": "^2.18.1",
+    "bitcoinjs-lib": "6.1.3",
     "viem": "^2.33.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.5",
+    "@repo/btc": "workspace:*",
     "@repo/config": "workspace:*",
     "@types/node": "22",
     "@wagmi/cli": "^2.3.2",
