--- a/contracts/btc/tsconfig.json
+++ b/contracts/btc/tsconfig.json
@@ -2,9 +2,15 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
-    "declaration": true,
-    "declarationMap": true,
-    "paths": { "@/*": ["./src/*"] }
+    "incremental": true,
+    "lib": ["ES2022"],
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "strictNullChecks": true,
+    "tsBuildInfoFile": "./.tsbuildinfo"
   },
   "exclude": ["node_modules", "dist"],
   "extends": "@repo/config/tsconfig/library/node",
