--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "declaration": true,
     "declarationMap": true,
-    "paths": { "@/*": ["./src/*"] },
+    "paths": { "@/*": ["./src/*"], "@repo/btc": ["../btc/src"] },
     "resolveJsonModule": true
   },
   "exclude": ["node_modules", "dist"],
